// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FilterOption correctly 1`] = `
<div
  className="checkbox null"
>
  <label
    className="checkbox_label"
    htmlFor="4AGRI"
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    <input
      checked={false}
      className="list-group-item fdk-label fdk-label-default"
      id="4AGRI"
      onChange={[Function]}
      tabIndex="-1"
      type="checkbox"
      value="AGRI"
    />
    <span
      className="checkbox-replacement"
    />
    Agriculture, fisheries, forestry and food
     (
    18
    )
  </label>
</div>
`;

exports[`should render FilterOption correctly with no corresponding theme 1`] = `
<div
  className="checkbox null"
>
  <label
    className="checkbox_label"
    htmlFor="4JUST"
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    <input
      checked={false}
      className="list-group-item fdk-label fdk-label-default"
      id="4JUST"
      onChange={[Function]}
      tabIndex="-1"
      type="checkbox"
      value="JUST"
    />
    <span
      className="checkbox-replacement"
    />
    Unknown
     (
    18
    )
  </label>
</div>
`;

exports[`should render FilterOption correctly with no theme 1`] = `
<div
  className="checkbox null"
>
  <label
    className="checkbox_label"
    htmlFor="0PUBLIC"
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    <input
      checked={false}
      className="list-group-item fdk-label fdk-label-default"
      id="0PUBLIC"
      onChange={[Function]}
      tabIndex="-1"
      type="checkbox"
      value="PUBLIC"
    />
    <span
      className="checkbox-replacement"
    />
    Public
     (
    463
    )
  </label>
</div>
`;
